--- a/public/templates/create-party.html
+++ b/public/templates/create-party.html
@@ -1,27 +1,28 @@
-<!-- <div class="create-party"> -->
+<div class="create-party"> -->
   <h1>create party</h1>
   <form>
     Pokemon 1:</br>
     <input type="text"></input>
-    </br>
-    Pokemon 2:</br>
-    <input type="text"></input>
-    </br>
-    Pokemon 3:</br>
-    <input type="text"></input>
-    </br>
-    Pokemon 4:</br>
-    <input type="text"></input>
-    </br>
-    Pokemon 5:</br>
-    <input type="text"></input>
-    </br>
-    Pokemon 1:</br>
-    <input type="text"></input>
-    </br>
-
+    <!--  hi   -->      
+        <!-- 
+        </br>
+        Pokemon 2:</br>
+        <input type="text"></input>
+        </br>
+        Pokemon 3:</br>
+        <input type="text"></input>
+        </br>
+        Pokemon 4:</br>
+        <input type="text"></input>
+        </br>
+        Pokemon 5:</br>
+        <input type="text"></input>
+        </br>
+        Pokemon 1:</br>
+        <input type="text"></input>
+        </br> -->
     </br></br></br></br>
   </form>
  
  <button>Submit Party</button>
-<!-- </div> -->
+<!-- </div>
